# MediNoteAI

./: ..gitignore.swp  .gitignore  .gitmodules  Dockerfile.web-ui  FastChat  Makefile  README.md  datasets.dvc  opencopilot  run.sh
.dvc/: config
config/: config.yaml  config_alt.yaml
docker/: Dockerfile.autogptq  Dockerfile.base  Dockerfile.deepspeed  Dockerfile.deepspeed-llava  Dockerfile.deepspeed-plus  Dockerfile.django  Dockerfile.docker-engine  Dockerfile.encoder  Dockerfile.erpnext  Dockerfile.fastchat  Dockerfile.flash-attention  Dockerfile.flash-attention2  Dockerfile.frozen  Dockerfile.magentic-one  Dockerfile.nemo  Dockerfile.npm-gpu  Dockerfile.nv-embed  Dockerfile.ollama-infinity-yolo  Dockerfile.ollama-webui  Dockerfile.onnx  Dockerfile.openai-vision-api  Dockerfile.opendevin  Dockerfile.openhand  Dockerfile.pipeline  Dockerfile.pyodbc  Dockerfile.redpanda  Dockerfile.scheduler  Dockerfile.sentence-transformers  Dockerfile.sqlcoder  Dockerfile.unsloth  Dockerfile.vision  Dockerfile.vllm  Dockerfile.voice  Dockerfile.web-ui  Dockerfile.webui  Dockerfile.webui.x  Dockerfile.workspace  Dockerfile.yolo  Dockerfile2  FastChat  (+8 more)
docs/: Readme.md  gpu-cost.md  supabase.md
helm/: Makefile  ai-nfs.yaml  data-curation-dev.yaml  data-curation.yaml  from-helm.backup  from-helm.yaml  host-pv.yaml  models-pvc.yaml  sample.yaml  service.yaml  test-gpu.yaml
notebooks/: medical-data-load.ipynb  skills.txt
src/mcp-servers/embedding/: README.md  embedding_server.py  pyproject.toml  requirements.txt
src/mcp-servers/embedding/src/embedding-tools/: __init__.py
(+285 files in other folders)
